Changed package name from sling.workflow to slingr.

--- a/README.Rmd
+++ b/README.Rmd
@@ -12,12 +12,12 @@ knitr::opts_chunk$set(
 )
 ```
 
-# sling.workflow
+# slingr
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of sling.workflow is to facilitate data analysis workflow of the SLING lab projects.
+The goal of slingr is to facilitate data analysis workflow of the SLING lab projects.
 
 ## Installation
 
@@ -25,5 +25,5 @@ The package is for internal use only. You can install it from [GitHub](https://g
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("zawmtun/sling.workflow")
+devtools::install_github("zawmtun/slingr")
 ```
