Add SLING web address to README.

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of slingr is to facilitate data analysis workflow of the SLING lab projects.
+The goal of {slingr} is to facilitate data analysis workflow of the [SLING lab](https://blog.nus.edu.sg/singaporesling/) projects.
 
 ## Installation
 
